--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,7 +173,7 @@ K2Node_EnhancedInputAction=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonC
 CameraComponent=CameraComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 CapsuleComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Tide_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-SceneComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+SceneComponent=
 K2Node_VariableGet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 PropertyWrapper=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 K2Node_VariableSet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
@@ -274,9 +274,10 @@ BP_TweenSector_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharac
 BP_Wander_Base_L_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Hammer_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Wander_Base_M_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
+BP_TweenSector_Base_Child_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CameraComponent.PostProcess.Lens,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Actor/RoundTable
+ContentBrowserTab1.SelectedPaths=/Game/Actor
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -333,14 +334,14 @@ LastLevel=/Game/Level/Map_Main
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" "
@@ -435,7 +436,7 @@ MaterialExpressionParameter="\"Object\" "
 MaterialExpression="\"Object\" "
 BP_Star_C="\"Object\" "
 ChildActorComponent="\"Object\" "
-SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SphereComponent="\"Object\" "
 Image="\"Object\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
@@ -566,13 +567,12 @@ BP_HollowTable_Base_M_C="\"Object\" "
 BP_HollowTable_Base_L_C="\"Object\" "
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
+FbxImportUI="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Actor/RoundTable/BP_Wander_Base_L.BP_Wander_Base_L
-OpenAssetsAtExit=/Game/Actor/RoundTable/BP_Wander_Base.BP_Wander_Base
-OpenAssetsAtExit=/Game/Actor/RoundTable/BP_Wander_Base_M.BP_Wander_Base_M
+OpenAssetsAtExit=/Game/Actor/BP_TweenSector_Base_Child.BP_TweenSector_Base_Child
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2526,30 +2526,50 @@ BP_Hammer_Base_C.TransformCommon=True
 BP_Hammer_Base_C.Networking=True
 BP_HollowTable_Base_M_C.TransformCommon=True
 BP_HollowTable_Base_M_C.Networking=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+BP_TweenSector_Base_Child_C.默认=True
+BP_TweenSector_Base_Child_C.Tick=True
+BP_TweenSector_Base_Child_C.Replication=True
+BP_TweenSector_Base_Child_C.Rendering=True
+BP_TweenSector_Base_Child_C.Collision=True
+BP_TweenSector_Base_Child_C.Actor=True
+BP_TweenSector_Base_Child_C.Input=True
+BP_TweenSector_Base_Child_C.HLOD=True
+BP_TweenSector_Base_Child_C.Physics=True
+BP_TweenSector_Base_Child_C.WorldPartition=True
+BP_TweenSector_Base_Child_C.Events=True
+BP_TweenSector_Base_Child_C.TransformCommon=True
+BP_TweenSector_Base_Child_C.Networking=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Actor/RoundTable/BP_Wander_Base
-MRUItem1=/Game/Actor/RoundTable/BP_Wander_Base_M
-MRUItem2=/Game/Actor/RoundTable/BP_Wander_Base_L
-MRUItem3=/Game/Curve/CF_Transverse_ExSlow
-MRUItem4=/Game/Curve/CF_Transverse1_Slow
-MRUItem5=/Game/Actor/BP_TweenSector_Base
-MRUItem6=/Game/Actor/BP_Hammer_Base
-MRUItem7=/Game/Actor/BP_Rover_Base
-MRUItem8=/Game/Actor/BP_Static
-MRUItem9=/Game/Actor/RoundTable/BP_WindMill_3way
-MRUItem10=/Game/Actor/RoundTable/BP_WindMill_Base
-MRUItem11=/Game/Actor/RoundTable/BP_RoundTable_Cross
-MRUItem12=/Game/Actor/RoundTable/BP_HollowTable_Base
-MRUItem13=/Game/Actor/BP_Seesaw_ObSwing
-MRUItem14=/Game/Actor/BP_Seesaw_Base
-MRUItem15=/Game/Curve/CF_Once/CF_SizeSmall
-MRUItem16=/Game/Curve/CF_Once/CF_SizeBorn
-MRUItem17=/Game/Actor/BP_WindMill_Base
-MRUItem18=/Game/Level/Map_Main
-MRUItem19=/Game/Level/1
+MRUItem0=/Game/Actor/BP_TweenSector_Base_Child
+MRUItem1=/Game/Actor/BP_TweenSector_Base
+MRUItem2=/Game/Actor/RoundTable/BP_Wander_Base
+MRUItem3=/Game/Actor/RoundTable/BP_Wander_Base_M
+MRUItem4=/Game/Actor/RoundTable/BP_Wander_Base_L
+MRUItem5=/Game/Curve/CF_Transverse_ExSlow
+MRUItem6=/Game/Curve/CF_Transverse1_Slow
+MRUItem7=/Game/Actor/BP_Hammer_Base
+MRUItem8=/Game/Actor/BP_Rover_Base
+MRUItem9=/Game/Actor/BP_Static
+MRUItem10=/Game/Actor/RoundTable/BP_WindMill_3way
+MRUItem11=/Game/Actor/RoundTable/BP_WindMill_Base
+MRUItem12=/Game/Actor/RoundTable/BP_RoundTable_Cross
+MRUItem13=/Game/Actor/RoundTable/BP_HollowTable_Base
+MRUItem14=/Game/Actor/BP_Seesaw_ObSwing
+MRUItem15=/Game/Actor/BP_Seesaw_Base
+MRUItem16=/Game/Curve/CF_Once/CF_SizeSmall
+MRUItem17=/Game/Curve/CF_Once/CF_SizeBorn
+MRUItem18=/Game/Actor/BP_WindMill_Base
+MRUItem19=/Game/Level/Map_Main
 
 [PlacementMode]
+RecentlyPlaced=/Game/Actor/BP_TweenSector_Base_Child.BP_TweenSector_Base_Child;
+RecentlyPlaced=/Game/Mesh/SM_Sector_Cylinder.SM_Sector_Cylinder;
 RecentlyPlaced=/Game/Actor/BP_Seesaw_ObSwing.BP_Seesaw_ObSwing;
 RecentlyPlaced=/Game/Actor/Once/BP_Once_Base.BP_Once_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross.BP_RoundTable_Cross;
@@ -2568,8 +2588,6 @@ RecentlyPlaced=/Game/Actor/BP_TweenSector_Base.BP_TweenSector_Base;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_M.BP_HollowTable_Ring_M;
 RecentlyPlaced=/Game/Actor/RoundTable/BP_WindMill_Base.BP_WindMill_Base;
 RecentlyPlaced=/Game/Actor/BP_Rover_Base.BP_Rover_Base;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross_M.BP_RoundTable_Cross_M;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Base_M.BP_RoundTable_Base_M;
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Meshes/SM_Cube.SM_Cube=1
@@ -2712,9 +2730,10 @@ RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Base_M.BP_RoundTable_Base_M;
 /Game/Curve/CF_Transverse_Slow.CF_Transverse_Slow=1
 /Game/Actor/BP_Hammer_Base.BP_Hammer_Base=1
 /Game/Actor/RoundTable/BP_Wander_Base_M.BP_Wander_Base_M=1
+/Game/Actor/BP_TweenSector_Base_Child.BP_TweenSector_Base_Child=1
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=FBXImport
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2791,7 +2810,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=242.000 Y=115.000
+ScreenPosition=X=502.000 Y=64.000
 WindowSize=X=1280.000 Y=786.000
 InitiallyMaximized=True
 
@@ -4265,4 +4284,116 @@ DisplayActorsCount=False
 /Game/Curve/CF_Once=(R=0.000000,G=0.688482,B=1.000000,A=1.000000)
 /Game/Actor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
 /Game/Curve=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=False
+bImportMaterials=True
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildReversedIndexBuffer=True
+bBuildNanite=False
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+DistanceFieldResolutionScale=1.000000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bSnapToClosestFrameBoundary=False
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
