--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -292,7 +292,7 @@ PlayerController=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C
 StaticMesh=StaticMesh.ImportSettings.Mesh,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Actor/RoundTable
+ContentBrowserTab1.SelectedPaths=/Game/Actor
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -354,7 +354,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Model/WindMill/600/texture
+ContentBrowserDrawer.SelectedPaths=/Game/Model/Once_Base
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -406,14 +406,14 @@ LastLevel=/Game/Level/Map_Main
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
 CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SceneComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
@@ -708,7 +708,7 @@ BP_Tide_Base_C.WorldPartition=True
 BP_Tide_Base_C.Events=True
 StaticMeshComponent.Variable=True
 StaticMeshComponent.TransformCommon=True
-StaticMeshComponent.Sockets=False
+StaticMeshComponent.Sockets=True
 StaticMeshComponent.StaticMesh=True
 StaticMeshComponent.ComponentTick=True
 StaticMeshComponent.Physics=True
@@ -2820,26 +2820,26 @@ K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Actor/RoundTable/BP_WindMill_3way_L
-MRUItem1=/Game/Actor/RoundTable/BP_WindMill_3way_M
-MRUItem2=/Game/Actor/RoundTable/BP_WindMill_3way
-MRUItem3=/Game/Model/RoundTable_Cross/2000/Cross_2000
-MRUItem4=/Game/Model/RoundTable_Cross/1600/Cross_1600
-MRUItem5=/Game/Model/RoundTable_Cross/1200/Cross_1200
-MRUItem6=/Game/Model/Wander/Wander
-MRUItem7=/Game/Actor/RoundTable/BP_Wander_Base
-MRUItem8=/Game/Actor/RoundTable/BP_HollowTable_Base_M
-MRUItem9=/Game/Actor/RoundTable/BP_HollowTable_Base_L
-MRUItem10=/Game/Actor/RoundTable/BP_RoundTable_Cross
-MRUItem11=/Game/Actor/RoundTable/BP_RoundTable_Cross_M
-MRUItem12=/Game/Actor/RoundTable/BP_RoundTable_Cross_L
-MRUItem13=/Game/Model/RoundTable_Cross/2000/plate_001
-MRUItem14=/Game/Model/RoundTable_Cross/1600/surface_001
-MRUItem15=/Game/Actor/RoundTable/BP_RoundTable_Base_L
-MRUItem16=/Game/Actor/RoundTable/BP_RoundTable_Base_M
-MRUItem17=/Game/Actor/RoundTable/BP_RoundTable_Base
-MRUItem18=/Game/Actor/RoundTable/BP_RoundTable_3way_M
-MRUItem19=/Game/Actor/RoundTable/BP_RoundTable_3way_L
+MRUItem0=/Game/Actor/BP_Seesaw_Base
+MRUItem1=/Game/Actor/Once/BP_Once_Base
+MRUItem2=/Game/Actor/RoundTable/BP_WindMill_Base_M
+MRUItem3=/Game/Actor/RoundTable/BP_WindMill_Base_L
+MRUItem4=/Game/Actor/RoundTable/BP_WindMill_Base
+MRUItem5=/Game/Actor/RoundTable/BP_WindMill_3way_L
+MRUItem6=/Game/Actor/RoundTable/BP_WindMill_3way_M
+MRUItem7=/Game/Actor/RoundTable/BP_WindMill_3way
+MRUItem8=/Game/Model/RoundTable_Cross/2000/Cross_2000
+MRUItem9=/Game/Model/RoundTable_Cross/1600/Cross_1600
+MRUItem10=/Game/Model/RoundTable_Cross/1200/Cross_1200
+MRUItem11=/Game/Model/Wander/Wander
+MRUItem12=/Game/Actor/RoundTable/BP_Wander_Base
+MRUItem13=/Game/Actor/RoundTable/BP_HollowTable_Base_M
+MRUItem14=/Game/Actor/RoundTable/BP_HollowTable_Base_L
+MRUItem15=/Game/Actor/RoundTable/BP_RoundTable_Cross
+MRUItem16=/Game/Actor/RoundTable/BP_RoundTable_Cross_M
+MRUItem17=/Game/Actor/RoundTable/BP_RoundTable_Cross_L
+MRUItem18=/Game/Model/RoundTable_Cross/2000/plate_001
+MRUItem19=/Game/Model/RoundTable_Cross/1600/surface_001
 
 [PlacementMode]
 RecentlyPlaced=/Game/Actor/BP_MusicPlayer.BP_MusicPlayer;
@@ -3120,7 +3120,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=328.667 Y=168.000
-WindowSize=X=1284.000 Y=790.000
+WindowSize=X=1286.000 Y=792.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -4613,7 +4613,7 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=False
-bImportMaterials=False
+bImportMaterials=True
 bImportTextures=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
