--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,7 +177,7 @@ K2Node_EnhancedInputAction=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonC
 CameraComponent=CameraComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 CapsuleComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BP_Tide_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-SceneComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
+SceneComponent=
 K2Node_VariableGet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 PropertyWrapper=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 K2Node_VariableSet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
@@ -283,7 +283,7 @@ BP_Float_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.
 BP_Hammer_Hollow_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Gate_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BP_Gate_Solid_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
-BP_Gate_Base_L_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CameraComponent.PostProcess.Lens,
+BP_Gate_Base_L_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CameraComponent.PostProcess.Lens,BoxComponent.Collision.Collision,
 BP_Stage_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
 AudioVolume=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,
@@ -293,7 +293,7 @@ PlayerController=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C
 StaticMesh=StaticMesh.ImportSettings.Mesh,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Model/Gate_Solid
+ContentBrowserTab1.SelectedPaths=/Game/Model/Gate_Base
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -355,7 +355,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Level
+ContentBrowserDrawer.SelectedPaths=/Game/Model/Gate_Base
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -407,14 +407,14 @@ LastLevel=/Game/Level/Map_Main
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
@@ -661,8 +661,10 @@ MaterialExpressionConstant="\"Object\" "
 MaterialExpressionVectorParameter="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Actor/BP_Gate_Base.BP_Gate_Base
+OpenAssetsAtExit=/Game/Actor/BP_Gate_Base_L.BP_Gate_Base_L
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2855,26 +2857,26 @@ MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Level/Map_Main
-MRUItem1=/Game/Level/Map_Main1
-MRUItem2=/Game/Actor/BP_Gate_Solid
-MRUItem3=/Game/Model/Gate_Solid/pan
-MRUItem4=/Game/Model/Gate_Solid/eyes
-MRUItem5=/Game/Model/Gate_Solid/teeth
-MRUItem6=/Game/Model/RoundTable_Cross/1600/Cross_1600
-MRUItem7=/Game/Actor/RoundTable/BP_RoundTable_Cross_M
-MRUItem8=/Game/Actor/RoundTable/BP_Wander_Base
-MRUItem9=/Game/Actor/BP_SavePoint
-MRUItem10=/Game/Model/Rover/Rover
-MRUItem11=/Game/Actor/BP_Rover_Base
-MRUItem12=/Game/Actor/BP_Hammer_Base
-MRUItem13=/Game/Model/Hammer/Hammer
-MRUItem14=/Game/Model/Hammer/eyes_white
-MRUItem15=/Game/Model/Hammer/pigEyes
-MRUItem16=/Game/Model/Hammer/pigHammer
-MRUItem17=/Game/Model/Hammer/PigNose
-MRUItem18=/Game/Model/Hammer/pigHammer_PigNose
-MRUItem19=/Game/Actor/BP_Stage_Base
+MRUItem0=/Game/Actor/BP_Gate_Base_L
+MRUItem1=/Game/Actor/BP_Gate_Base
+MRUItem2=/Game/Level/Map_Main
+MRUItem3=/Game/Level/Map_Main1
+MRUItem4=/Game/Actor/BP_Gate_Solid
+MRUItem5=/Game/Model/Gate_Solid/pan
+MRUItem6=/Game/Model/Gate_Solid/eyes
+MRUItem7=/Game/Model/Gate_Solid/teeth
+MRUItem8=/Game/Model/RoundTable_Cross/1600/Cross_1600
+MRUItem9=/Game/Actor/RoundTable/BP_RoundTable_Cross_M
+MRUItem10=/Game/Actor/RoundTable/BP_Wander_Base
+MRUItem11=/Game/Actor/BP_SavePoint
+MRUItem12=/Game/Model/Rover/Rover
+MRUItem13=/Game/Actor/BP_Rover_Base
+MRUItem14=/Game/Actor/BP_Hammer_Base
+MRUItem15=/Game/Model/Hammer/Hammer
+MRUItem16=/Game/Model/Hammer/eyes_white
+MRUItem17=/Game/Model/Hammer/pigEyes
+MRUItem18=/Game/Model/Hammer/pigHammer
+MRUItem19=/Game/Model/Hammer/PigNose
 
 [PlacementMode]
 RecentlyPlaced=/Game/Model/Seasaw/Small/Seesaw_Small_plate.Seesaw_Small_plate;
@@ -3163,7 +3165,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=30.000 Y=0.000
-WindowSize=X=1288.000 Y=794.000
+WindowSize=X=1292.000 Y=798.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -4657,7 +4659,7 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=False
-bImportMaterials=True
+bImportMaterials=False
 bImportTextures=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
